Add product-alert component

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -6,10 +6,14 @@
       {{ product.name }}
     </a>
   </h3>
+
   <p *ngIf="product.description">
     {{ product.description }}
   </p>
+
   <button (click)="share()">Share</button>
+
+  <app-product-alert [product]="product"></app-product-alert>
 </div>
 
 <!-- 
