--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,1 +1,13 @@
-<p>product-details works!</p>
+<div *ngIf="product">
+    <h2>
+        {{ product.name }}
+    </h2>
+
+    <p>
+        {{ product.description }}
+    </p>
+
+    <p>
+        Price: {{ product.price | currency }}
+    </p>
+</div>
